@@ -5,6 +5,9 @@
  * Use fullname from gecos field, if available.
    (Jelmer Vernooĳ)
 
+ * Support ``GIT_AUTHOR_NAME`` / ``GIT_AUTHOR_EMAIL``.
+   (Jelmer Vernooĳ)
+
  * Add support for short ids in parse_commit. (Jelmer Vernooĳ)
 
  * Add support for ``prune`` and ``prune_tags`` arguments
